--- a/employee/src/main/resources/application.yml
+++ b/employee/src/main/resources/application.yml
@@ -4,12 +4,12 @@ micronaut:
   database:
     host: localhost
     user: root
-    pass: root
+    pass: ''
     name: companies
 datasources:
     default:
         url: jdbc:h2:mem:default;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
         username: root
-        password: root
+        password: ''
         driverClassName: org.h2.Driver
         name: companies
